--- a/index.html
+++ b/index.html
@@ -19,51 +19,51 @@
   <!--Gallery-->
   <div class="gallery">
     <a href="photos/01.jpg" class="photos"  data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
-    <img src="thumbnails/01.jpg" alt="Hay Bales">
+    <img src="photos/thumbnails/01.jpg" alt="Hay Bales">
     </a>
 
     <a href="photos/02.jpg" class="photos"  data-caption="The lake was so calm today. We had a great view of the snow on the mountains from here.">
-    <img src="thumbnails/02.jpg" alt="Lake">
+    <img src="photos/thumbnails/02.jpg" alt="Lake">
     </a>
 
     <a href="photos/03.jpg" class="photos"  data-caption="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
-    <img src="thumbnails/03.jpg" alt="Canyon">
+    <img src="photos/thumbnails/03.jpg" alt="Canyon">
     </a>
 
     <a href="photos/04.jpg" class="photos"  data-caption="It was amazing to see an iceberg up close, it was so cold but didn’t snow today.">
-    <img src="thumbnails/04.jpg" alt="Iceberg">
+    <img src="photos/thumbnails/04.jpg" alt="Iceberg">
     </a>
 
     <a href="photos/05.jpg" class="photos"  data-caption="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
-    <img src="thumbnails/05.jpg" alt="Desert">
+    <img src="photos/thumbnails/05.jpg" alt="Desert">
     </a>
 
     <a href="photos/06.jpg" class="photos"  data-caption="Fall is coming, I love when the leaves on the trees start to change color.">
-    <img src="thumbnails/06.jpg" alt="Fall">
+    <img src="photos/thumbnails/06.jpg" alt="Fall">
     </a>
 
     <a href="photos/07.jpg" class="photos"  data-caption="I drove past this plantation yesterday, everything is so green!">
-    <img src="thumbnails/07.jpg" alt="Plantation">
+    <img src="photos/thumbnails/07.jpg" alt="Plantation">
     </a>
 
     <a href="photos/08.jpg" class="photos"  data-caption="My summer vacation to the Oregon Coast. I love the sandy dunes!">
-    <img src="thumbnails/08.jpg" alt="Dunes">
+    <img src="photos/thumbnails/08.jpg" alt="Dunes">
     </a>
 
     <a href="photos/09.jpg" class="photos"  data-caption="We enjoyed a quiet stroll down this countryside lane.">
-    <img src="thumbnails/09.jpg" alt="Countryside Lane">
+    <img src="photos/thumbnails/09.jpg" alt="Countryside Lane">
     </a>
 
     <a href="photos/10.jpg" class="photos"  data-caption="Sunset at the coast! The sky turned a lovely shade of orange.">
-    <img src="thumbnails/10.jpg" alt="Sunset">
+    <img src="photos/thumbnails/10.jpg" alt="Sunset">
     </a>
 
     <a href="photos/11.jpg" class="photos"  data-caption="I did a tour of a cave today and the view of the landscape below was breathtaking.">
-    <img src="thumbnails/11.jpg" alt="Cave">
+    <img src="photos/thumbnails/11.jpg" alt="Cave">
     </a>
 
     <a href="photos/12.jpg" class="photos"  data-caption="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
-    <img src="thumbnails/12.jpg" alt="Bluebells">
+    <img src="photos/thumbnails/12.jpg" alt="Bluebells">
     </a>
 
   </div>
