--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <main>
   <!--Gallery-->
   <div class="gallery">
-    <a href="photos/thumbnails/01.jpg" class="photos"  data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
-    <img src="photos/01.jpg" alt="Hay Bales">
+    <a href="photos\01.jpg" class="photos"  data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
+    <img src="photos\01.jpg" alt="Hay Bales">
     </a>
 
     <a href="photos/02.jpg" class="photos"  data-caption="The lake was so calm today. We had a great view of the snow on the mountains from here.">
