--- a/index.html
+++ b/index.html
@@ -22,48 +22,48 @@
     <img src="Photos/thumbnails/01.jpg" alt="Hay Bales">
     </a>
 
-    <a href="photos/02.jpg" class="photos"  data-caption="The lake was so calm today. We had a great view of the snow on the mountains from here.">
-    <img src="photos/thumbnails/02.jpg" alt="Lake">
+    <a href="Photos/02.jpg" class="photos"  data-caption="The lake was so calm today. We had a great view of the snow on the mountains from here.">
+    <img src="Photos/thumbnails/02.jpg" alt="Lake">
     </a>
 
-    <a href="photos/03.jpg" class="photos"  data-caption="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
-    <img src="photos/thumbnails/03.jpg" alt="Canyon">
+    <a href="Photos/03.jpg" class="photos"  data-caption="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
+    <img src="Photos/thumbnails/03.jpg" alt="Canyon">
     </a>
 
     <a href="photos/04.jpg" class="photos"  data-caption="It was amazing to see an iceberg up close, it was so cold but didn’t snow today.">
     <img src="photos/thumbnails/04.jpg" alt="Iceberg">
     </a>
 
-    <a href="photos/05.jpg" class="photos"  data-caption="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
-    <img src="photos/thumbnails/05.jpg" alt="Desert">
+    <a href=Photos/05.jpg" class="photos"  data-caption="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
+    <img src="Photos/thumbnails/05.jpg" alt="Desert">
     </a>
 
-    <a href="photos/06.jpg" class="photos"  data-caption="Fall is coming, I love when the leaves on the trees start to change color.">
-    <img src="photos/thumbnails/06.jpg" alt="Fall">
+    <a href="Photos/06.jpg" class="photos"  data-caption="Fall is coming, I love when the leaves on the trees start to change color.">
+    <img src="Photos/thumbnails/06.jpg" alt="Fall">
     </a>
 
-    <a href="photos/07.jpg" class="photos"  data-caption="I drove past this plantation yesterday, everything is so green!">
-    <img src="photos/thumbnails/07.jpg" alt="Plantation">
+    <a href="Photos/07.jpg" class="photos"  data-caption="I drove past this plantation yesterday, everything is so green!">
+    <img src="Photos/thumbnails/07.jpg" alt="Plantation">
     </a>
 
-    <a href="photos/08.jpg" class="photos"  data-caption="My summer vacation to the Oregon Coast. I love the sandy dunes!">
-    <img src="photos/thumbnails/08.jpg" alt="Dunes">
+    <a href="Photos/08.jpg" class="photos"  data-caption="My summer vacation to the Oregon Coast. I love the sandy dunes!">
+    <img src="Photos/thumbnails/08.jpg" alt="Dunes">
     </a>
 
-    <a href="photos/09.jpg" class="photos"  data-caption="We enjoyed a quiet stroll down this countryside lane.">
-    <img src="photos/thumbnails/09.jpg" alt="Countryside Lane">
+    <a href="Photos/09.jpg" class="photos"  data-caption="We enjoyed a quiet stroll down this countryside lane.">
+    <img src="Photos/thumbnails/09.jpg" alt="Countryside Lane">
     </a>
 
-    <a href="photos/10.jpg" class="photos"  data-caption="Sunset at the coast! The sky turned a lovely shade of orange.">
-    <img src="photos/thumbnails/10.jpg" alt="Sunset">
+    <a href="Photos/10.jpg" class="photos"  data-caption="Sunset at the coast! The sky turned a lovely shade of orange.">
+    <img src="Photos/thumbnails/10.jpg" alt="Sunset">
     </a>
 
-    <a href="photos/11.jpg" class="photos"  data-caption="I did a tour of a cave today and the view of the landscape below was breathtaking.">
-    <img src="photos/thumbnails/11.jpg" alt="Cave">
+    <a href="Photos/11.jpg" class="photos"  data-caption="I did a tour of a cave today and the view of the landscape below was breathtaking.">
+    <img src="Photos/thumbnails/11.jpg" alt="Cave">
     </a>
 
-    <a href="photos/12.jpg" class="photos"  data-caption="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
-    <img src="photos/thumbnails/12.jpg" alt="Bluebells">
+    <a href="Photos/12.jpg" class="photos"  data-caption="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
+    <img src="Photos/thumbnails/12.jpg" alt="Bluebells">
     </a>
 
   </div>
