--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <img src="Photos/thumbnails/03.jpg" alt="Canyon">
     </a>
 
-    <a href="photos/04.jpg" class="photos"  data-caption="It was amazing to see an iceberg up close, it was so cold but didn’t snow today.">
-    <img src="photos/thumbnails/04.jpg" alt="Iceberg">
+    <a href="Photos/04.jpg" class="photos"  data-caption="It was amazing to see an iceberg up close, it was so cold but didn’t snow today.">
+    <img src="Photos/thumbnails/04.jpg" alt="Iceberg">
     </a>
 
     <a href=Photos/05.jpg" class="photos"  data-caption="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
