--- a/index.html
+++ b/index.html
@@ -71,5 +71,10 @@
 
 <script src="js/app.js"></script>
 <script src="js/baguetteBox.min.js" async></script>
+<script>
+window.addEventListener('load', function() {
+  baguetteBox.run('.gallery');
+});
+</script>
 </body>
 </html>
