--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/baguetteBox.min.css">
-    <script src="<JS URL>" async></script>
+
 
 </head>
 
@@ -69,8 +69,8 @@
   </div>
 </main>
 
+<script src="js/baguetteBox.min.js"></script>
 <script src="js/app.js"></script>
-<script src="js/baguetteBox.min.js" async></script>
 <script>
 window.addEventListener('load', function() {
   baguetteBox.run('.gallery');
