made corrections for code to run

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <!--Search Bar-->
-  <input type="search" name="search id="search" placeholder="Search">
+  <input type="search" name="search" id="search" placeholder="Search">
 
 <main>
   <!--Gallery-->
@@ -34,7 +34,7 @@
     <img src="Photos/thumbnails/04.jpg" alt="Iceberg">
     </a>
 
-    <a href=Photos/05.jpg" class="photos"  data-caption="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
+    <a href="Photos/05.jpg" class="photos"  data-caption="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
     <img src="Photos/thumbnails/05.jpg" alt="Desert">
     </a>
 
