--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   </div>
 </main>
-
+<script src="js/mySearchFilter.js"></script>
 <script src="js/baguetteBox.min.js"></script>
 <script src="js/app.js"></script>
 <script>
