--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 <script src="js/mySearchFilter.js"></script>
 <script src="js/baguetteBox.min.js"></script>
 <script src="js/app.js"></script>
-
+<script> window.addEventListener('load', function() {
+  baguetteBox.run('.gallery');
+}); </script>
 </body>
 </html>
